Evitar destaque ao pairar em itens clicáveis

--- a/index.html
+++ b/index.html
@@ -1125,12 +1125,16 @@
             padding: 0;
             font: inherit;
             text-decoration: underline;
+            transition: none;
         }
 
         .link-button:hover,
         .link-button:focus-visible {
-            color: #0d2a5d;
-            text-decoration: none;
+            color: #1F448C;
+            text-decoration: underline;
+            background-color: transparent;
+            transform: none;
+            box-shadow: none;
         }
 
         .link-button:focus-visible {
