--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
         .search-suggestion {
             border: 1px solid transparent;
-            background: #f5f7ff;
+            background: #8c7d1f;
             border-radius: 12px;
             padding: 12px 14px;
             text-align: left;
@@ -283,7 +283,7 @@
 
         .search-suggestion:hover,
         .search-suggestion:focus-visible {
-            border-color: #1F448C;
+            border-color: #ffe15e;
             box-shadow: 0 10px 24px rgba(31, 68, 140, 0.15);
             transform: translateY(-1px);
             outline: none;
@@ -362,7 +362,7 @@
         }
         
         button:hover {
-            background-color: #163666;
+            background-color: #fff6cf;
             transform: translateY(-1px);
         }
         
