--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
         .search-suggestion {
             border: 1px solid transparent;
-            background: #8c7d1f;
+            background: #fffded;
             border-radius: 12px;
             padding: 12px 14px;
             text-align: left;
